upgrade to java 21 and springBoot version